// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringControl renders StringControl unchanged 1`] = `
<div>
  <div
    class="sc-2f9d5146-0 kysoaZ"
  >
    <div
      class="sc-233fee17-0 bfoGJf"
      disabled=""
    >
      <input
        disabled=""
        placeholder=" "
        type="text"
        value="derp"
      />
      <label
        class="sc-840480c4-0 jepABy"
      >
        String test
      </label>
      <div
        class="sc-8c7bf1ae-2 jOAuUM"
      >
        <div
          class="sc-8c7bf1ae-0 gTUyet"
          color="white"
        >
          <div
            class="sc-9eb58f28-0 gvNxsL"
            color="white"
          />
        </div>
      </div>
    </div>
    <div
      class="sc-955ed11e-0 griBRj"
    />
  </div>
</div>
`;

exports[`StringControl renders StringControl:Phone unchanged 1`] = `
<div>
  <div
    class="sc-2f9d5146-0 bVdSQY"
  >
    <div
      class="sc-233fee17-0 bfoGJf"
      disabled=""
    >
      <input
        disabled=""
        placeholder=" "
        type="text"
        value=""
      />
      <label
        class="sc-840480c4-0 jepABy"
      >
        String test
      </label>
      <div
        class="sc-8c7bf1ae-2 jOAuUM"
      >
        <div
          class="sc-8c7bf1ae-0 gTUyet"
          color="white"
        >
          <div
            class="sc-9eb58f28-0 gvNxsL"
            color="white"
          />
        </div>
      </div>
    </div>
    <div
      class="sc-955ed11e-0 griBRj"
    />
  </div>
</div>
`;
